# img-crash

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
.github/workflows/: cross-mac-release.yml  cross-release.yml  release.yml  rust.yml
src/: cli.rs  image.rs  main.rs  optimize.rs
src/cli/: clap.rs  mod.rs
