[package]
name = "img-crash"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
repository = "https://github.com/DoumanAsh/img-crash"
description = "Image optimizer."
keywords = ["image"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
clap = "2"
memmap = "0"
num_cpus = "1"
walkdir = "2"

#serde = "1"
#toml = "0"
#serde_derive = "1"

mime = "0.3"
mime_guess = "2.0.0-alpha.4"

[dependencies.oxipng]
version = "2"
default-features = false
features = ["parallel"]
