[package]
name = "img-crash"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
repository = "https://github.com/DoumanAsh/img-crash"
description = "Image optimizer."
keywords = ["image"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[dependencies]
arg = "0.4"
memmap = "0"
walkdir = "2"
c-main = "1"

mime = "0.3"
mime_guess = "2"

[dependencies.oxipng]
version = "9"
default-features = false
features = ["parallel"]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
strip = true
